fixed Header Bar Overlapping

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ button {
 /**** MAIN PAGE  ****/
 /* Header Styles */
 .main-head {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
